--- a/gpo2/ClientApp/public/index.html
+++ b/gpo2/ClientApp/public/index.html
@@ -26,6 +26,7 @@
 </head>
 <body>
    
+    <a href="cert.html">Войти с помощью сертификата</a>
     <noscript>
         You need to enable JavaScript to run this app.
     </noscript>
